baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Doc {
  title: string
}
class user.Holder {
  f: T
}
class user.MyTool {
  name: string
}
class user.ToolError {
  message: string
}
function user.main() -> int  [expr] {
  { let bad_ret: baml.AnyFunction<Returns = string> = web_search; let bad_throws: baml.AnyFunction<Throws = never> = web_search; let not_a_fn: baml.AnyFunction = 42; let narrow: baml.AnyFunction<Returns = user.Doc[]> = web_search; let bad_widen: baml.AnyFunction<Returns = string> = narrow; return 0 }
}
function user.pick(f: T) -> T  [expr] {
  { return f }
}
function user.web_search(q: string) -> user.Doc[]  [expr] {
  { if (q Eq "boom") { throw user.ToolError { message: "no results" } }; return [user.Doc { title: q }] }
}
