baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.MyTool {
  name: string
}
function user.pick<T>(f: T) -> T throws never {
  { : never
    return f : T
  }
  !! 283..365: `baml.AnyFunction` cannot be used as a generic bound; use it as a value type instead (e.g. `f: baml.AnyFunction`)
}
class user.Holder {
  f: T
}
class user.MyTool$stream {
  name: string | null
}
class user.Holder$stream {
  f: T | null
}
class user.ToolError {
  message: string
}
class user.Doc {
  title: string
}
function user.web_search(q: string) -> user.Doc[] throws user.ToolError {
  { : never
    if (q == "boom" : bool) : void
      { : never
        throw ToolError { message: "no results" } : user.ToolError
      }
    return [Doc { title: q }] : user.Doc[]
  }
}
function user.main() -> int throws never {
  { : never
    let bad_ret: baml.AnyFunction<Returns = string> = web_search : (q: string) -> user.Doc[] throws user.ToolError -> baml.AnyFunction<Returns = string, Throws = unknown>
    let bad_throws: baml.AnyFunction<Throws = never> = web_search : (q: string) -> user.Doc[] throws user.ToolError -> baml.AnyFunction<Throws = never, Returns = unknown>
    let not_a_fn: baml.AnyFunction = 42 : 42 -> baml.AnyFunction<Returns = unknown, Throws = unknown>
    let narrow: baml.AnyFunction<Returns = Doc[]> = web_search : (q: string) -> user.Doc[] throws user.ToolError -> baml.AnyFunction<Returns = user.Doc[], Throws = unknown>
    let bad_widen: baml.AnyFunction<Returns = string> = narrow : baml.AnyFunction<Returns = user.Doc[], Throws = unknown> -> baml.AnyFunction<Returns = string, Throws = unknown>
    return 0 : 0
  }
  !! 595..605: type mismatch: expected baml.AnyFunction<Returns = string, Throws = unknown>, got (q: string) -> Doc[] throws ToolError
  !! 661..671: type mismatch: expected baml.AnyFunction<Throws = never, Returns = unknown>, got (q: string) -> Doc[] throws ToolError
  !! 709..711: type mismatch: expected baml.AnyFunction<Returns = unknown, Throws = unknown>, got 42
  !! 831..837: type mismatch: expected baml.AnyFunction<Returns = string, Throws = unknown>, got baml.AnyFunction<Returns = Doc[], Throws = unknown>
}
class user.ToolError$stream {
  message: string | null
}
class user.Doc$stream {
  title: string | null
}
